# mcp-wallector

./: .env  .env.example  db_wallector.sql  generate_token.py  main.py  pyproject.toml
src/: __init__.py  auth.py  config.py
src/tools/: __init__.py  mysql.py  products.py  server_info.py
src/utils/: mysql_client.py
tests/: test_auth.py
